// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`strongIcon Multiple icons: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "path": "me",
        "pathType": "relative",
        "type": "strongIcon",
      },
      Object {
        "path": "me",
        "pathType": "relative",
        "type": "strongIcon",
      },
      Object {
        "path": "me",
        "pathType": "relative",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strongIcon Simple relative strong icon: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "path": "me",
        "pathType": "relative",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;

exports[`strongIcon Simple root strong icon: toMatchSnapshotWhenParsing 1`] = `
Array [
  Object {
    "indent": 0,
    "nodes": Array [
      Object {
        "path": "/icons/+1",
        "pathType": "root",
        "type": "strongIcon",
      },
    ],
    "type": "line",
  },
]
`;
